--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
+body {
+	margin: 0 auto;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	animation: gradient 15s ease infinite;
+	background-size: 400% 400%;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 .App {
-  text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	flex-direction: column;
+	position: relative;
+	min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-title {
+	position: absolute;
+	color: rgb(255, 184, 184, 0.2);
+	z-index: -100;
+	transform: rotate(-20deg);
+	font-size: 10rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+	border: none;
+	background-color: rgb(255, 255, 255, 0);
+	color: black;
+	border: 3px solid black;
+	padding: 1em;
+	margin: 0.5rem;
+	cursor: pointer;
+	font-weight: 700;
+	outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+	background-color: beige;
 }
 
-.App-link {
-  color: #61dafb;
+.timer-btn {
+	border: 6px solid black;
+	margin: 0.2;
+	font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.timer-btn:hover {
+	box-shadow: 6px 6px 0 black;
+	transform: scale(1.01);
+}
+
+.action-btns {
+	border: 5px solid black;
+	font-size: 1rem;
+	width: 86px;
+	height: 86px;
+	border-radius: 50%;
+}
+
+.action-btns:hover {
+	box-shadow: 4px 4px 0 black;
+	transform: scale(1.1);
+}
+
+.work-break {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+}
+
+.the-time {
+	font-size: 15rem;
+	font-weight: 700;
 }
