--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap");
+
 body {
 	margin: 0 auto;
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -29,17 +31,18 @@ body {
 
 .header-title {
 	position: absolute;
-	color: rgb(255, 184, 184, 0.2);
+	color: rgb(255, 184, 184, 0.3);
 	z-index: -100;
 	transform: rotate(-20deg);
-	font-size: 10rem;
+	font-size: 8rem;
+	font-family: "Dela Gothic One";
 }
 
 button {
 	border: none;
 	background-color: rgb(255, 255, 255, 0);
 	color: black;
-	border: 3px solid black;
+
 	padding: 1em;
 	margin: 0.5rem;
 	cursor: pointer;
@@ -52,9 +55,9 @@ button:hover {
 }
 
 .timer-btn {
-	border: 6px solid black;
+	border: 4px solid black;
 	margin: 0.2;
-	font-size: 2rem;
+	font-size: 1.5rem;
 }
 
 .timer-btn:hover {
@@ -63,7 +66,7 @@ button:hover {
 }
 
 .action-btns {
-	border: 5px solid black;
+	border: 4px solid black;
 	font-size: 1rem;
 	width: 86px;
 	height: 86px;
@@ -82,6 +85,13 @@ button:hover {
 }
 
 .the-time {
+	font-family: "Dela Gothic One";
 	font-size: 15rem;
 	font-weight: 700;
+}
+
+@media only screen and (max-width: 600px) {
+	.the-time {
+		font-size: 10rem;
+	}
 }
